about page chagne

--- a/about.html
+++ b/about.html
@@ -243,7 +243,7 @@
   <!------------------ End About Alaknanda Section --------------->
 
 
-<!----------- Start Our Mission and Vission Sections ---------------->
+  <!----------- Start Our Mission and Vission Sections ---------------->
 
   <section class="mission-vission-section">
     <div class="mission-main-container">
@@ -323,6 +323,128 @@
   </section>
 
   <!------------------- End Our Fleet Section ------------------->
+
+  <!------------------- Start Why Alaknanda Section ------------------->
+  <section class="why-section">
+    <div class="why-container">
+      <!-- Left Column: Text Content -->
+      <div class="why-text-column">
+        <h2 class="why-main-heading">
+          Why Alaknanda <span style="text-decoration: underline;">Transport?</span>
+        </h2>
+        <p class="why-description-paragraph">
+          <strong>🛡 Safety-First Approach</strong>
+          We maintain strict safety protocols to ensure that every shipment is protected from contamination,
+          leakage, and damage. Our tankers are regularly sanitized and inspected.
+        </p>
+        <p class="why-description-paragraph">
+          <strong>⏱ Timely Delivery, Every Time</strong>
+          We understand how critical time is in your production cycle. Our team ensures that delivery
+          schedules are met without delays through optimized logistics and trained drivers.
+        </p>
+        <p class="why-description-paragraph">
+          <strong>🚛 Modern & Certified Tanker Fleet</strong>
+          Our vehicles are specially built and approved for carrying molasses. Equipped with GPS tracking,
+          pressure seals, and anti-corrosion interiors, they ensure safe and compliant delivery.
+        </p>
+        <p class="why-description-paragraph">
+          <strong>📞 24/7 Support & Transparency</strong>
+          We believe in open communication. Our logistics coordinators provide real-time updates and
+          round-the-clock customer support.
+        </p>
+        <p class="why-description-paragraph">
+          <strong>🌱 Eco-Conscious Operations</strong>
+          We adhere to environmental regulations to minimize carbon footprints, avoid spillage, and protect
+          ecosystems during transit.
+        </p>
+      </div>
+
+      <!-- Right Column: Image Grid -->
+      <div class="why-image-grid-column">
+        <div class="why-image-grid-item" style="margin-top: 20px;">
+          <img src="https://cdn.pixabay.com/photo/2023/03/15/03/46/jeep-7853620_1280.jpg" alt="Team member 1">
+        </div>
+        <div class="why-image-grid-item">
+          <img src="https://cdn.pixabay.com/photo/2022/03/21/18/58/truck-7083763_1280.jpg" alt="Team member 2">
+        </div>
+        <div class="why-image-grid-item">
+          <img src="https://cdn.pixabay.com/photo/2022/03/21/18/58/truck-7083763_1280.jpg" alt="Team member 4">
+        </div>
+        <div class="why-image-grid-item">
+          <img src="https://cdn.pixabay.com/photo/2022/03/21/18/58/truck-7083763_1280.jpg" alt="Team member 3">
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!------------------- End Why Alaknanda Section ------------------->
+
+
+
+  <div class="what-we-container">
+    <div class="what-we-section-header">
+      <h2>What we do</h2>
+      <!-- 
+        <p>
+            We help entrepreneurs and business leaders build and launch innovative custom
+            software solutions to the market across a range of verticals & industries. We can help
+            you turn your vision into a successful product together, whether it’s in the form of a
+            Minimum Viable Product, UX/UI services, full product custom software development or
+            help to scale your company.
+        </p> 
+        -->
+    </div>
+
+    <div class="what-we-features-grid">
+      <!-- Feature Card 1: Product Scope -->
+      <div class="what-we-feature-card">
+        <svg class="what-we-icon-svg what-we-icon-product-scope" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+          stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M12 2L2 7l10 5 10-5-10-5z"></path>
+          <path d="M2 17l10 5 10-5"></path>
+          <path d="M2 12l10 5 10-5"></path>
+        </svg>
+        <h3 class="what-we-feature-title">✅ Molasses Transportation</h3>
+        <p class="what-we-feature-description">
+          Our core service is the bulk transport of molasses—a byproduct of sugar production—used primarily by
+          distilleries and cattle feed industries. We handle full truckload shipments across long distances with safety,
+          speed, and regulatory compliance.
+        </p>
+      </div>
+
+      <!-- Feature Card 2: AI Development & Enablement -->
+      <div class="what-we-feature-card">
+        <svg class="what-we-icon-svg what-we-icon-ai-dev" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+          stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M12 2L2 7l10 5 10-5-10-5z"></path>
+          <path d="M2 17l10 5 10-5"></path>
+          <path d="M2 12l10 5 10-5"></path>
+          <circle cx="12" cy="12" r="3"></circle>
+        </svg>
+        <h3 class="what-we-feature-title">✅ Custom Liquid Bulk Logistics</h3>
+        <p class="what-we-feature-description">
+          We offer custom-designed logistics solutions for other compatible liquid materials that require specialized
+          handling and transport methods.
+        </p>
+      </div>
+
+      <!-- Feature Card 3: MVP Builder -->
+      <div class="what-we-feature-card">
+        <svg class="what-we-icon-svg what-we-icon-mvp-builder" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+          stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M12 2L2 7l10 5 10-5-10-5z"></path>
+          <path d="M2 17l10 5 10-5"></path>
+          <path d="M2 12l10 5 10-5"></path>
+          <polyline points="2 7 12 12 22 7"></polyline>
+        </svg>
+        <h3 class="what-we-feature-title">✅ Pan-India Transport Network</h3>
+        <p class="what-we-feature-description">
+          From Uttar Pradesh to Tamil Nadu, Maharashtra to Assam—we cover every corner of India. Our network is
+          optimized for fast route planning, real-time tracking, and seamless load management.
+        </p>
+      </div>
+    </div>
+  </div>
 
 
 
