--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
       <li><span>01</span><a href="/index.html">HOME</a></li>
       <li><span>02</span><a href="/about.html">ABOUT US</a></li>
       <li class="has-submenu" id="servicesMenuItem">
-        <span>03</span><a href="#">SERVICES</a>
+        <span>03</span><a href="#">SERVICES <i class="fa-solid fa-angle-down"></i></a>
         <ul>
           <li><a href="/about/team.html">Molasses bulk Transport</a></li>
           <li><a href="/about/history.html">Pan-India Operations</a></li>
@@ -104,14 +104,14 @@
         </ul>
       </li>
       <li class="has-submenu" id="fleetMenuItem">
-        <span>04</span><a href="#">FLEET</a>
+        <span>04</span><a href="#">FLEET <i class="fa-solid fa-angle-down"></i></a>
         <ul>
           <li><a href="/about/team.html">Types of Vehicles</a></li>
           <li><a href="/about/history.html">Maintenance & Cleanliness Protocol</a></li>
         </ul>
       </li>
       <li class="has-submenu" id="industriesMenuItem">
-        <span>05</span><a href="#">INDUSTRIES SERVED</a>
+        <span>05</span><a href="#">INDUSTRIES SERVED <i class="fa-solid fa-angle-down"></i></a>
         <ul>
           <li><a href="/about/team.html">Sugar Factories</a></li>
           <li><a href="/about/history.html">Distilleries</a></li>
