--- a/pan-india.html
+++ b/pan-india.html
@@ -160,23 +160,14 @@
 
             <!-- Right Side: Content -->
             <div class="about-logistics-right">
-                <span class="about-logistics-subtitle">Alaknanda Transport – India’s Trusted Name in Molasses Bulk
-                    Transport</span>
-                <h2 class="about-logistics-title">Reliable. Compliant. Nationwide.</h2>
+                <span class="about-logistics-subtitle">Alaknanda Transport – Pan India Operations You Can Rely On</span>
+                <h2 class="about-logistics-title">Nationwide Logistics for Bulk Molasses Transport & More</h2>
                 <p class="about-logistics-description">
-                    At Alaknanda Transport, we specialize in the safe, efficient, and compliant transportation of
-                    molasses in bulk across India. With a fleet of well-maintained tankers and a commitment to timely
-                    delivery, we’ve become a trusted logistics partner for distilleries, sugar mills, and chemical
-                    industries that rely on the uninterrupted flow of this valuable byproduct.
+                    At Alaknanda Transport, we proudly offer Pan India logistics and transportation solutions, ensuring
+                    seamless delivery of bulk molasses and other liquid cargo across every corner of India. Our
+                    extensive fleet, experienced workforce, and deep understanding of regional compliance requirements
+                    make us the preferred transport partner for industries that demand speed, safety, and consistency.
                 </p>
-
-                <h4 class="about-logistics-title">What is Molasses and Why Proper Transport Matters?</h4>
-                <p class="about-logistics-description">Molasses is a thick, viscous by-product of sugar processing —
-                    rich in nutrients and widely used in alcohol production, cattle feed, and the fermentation industry.
-                    Due to its chemical composition, density, and risk of contamination, transporting molasses requires
-                    specialized tankers, temperature control, and strict hygiene protocols. At Alaknanda, we take all of
-                    this into account, ensuring quality transport from source to destination.</p>
-
             </div>
         </div>
     </section>
@@ -186,7 +177,7 @@
         <!-- Section Header -->
         <div class="section-header">
             <div class="header-left">
-                <h2 class="main-title">Our Molasses Transport Services Include:</h2>
+                <h2 class="main-title"> Services Enabled Through Our Pan India Operations:</h2>
             </div>
             <!-- <div class="header-right">
                 <p class="header-description">
@@ -204,10 +195,10 @@
                 <div class="feature-icon-wrapper">
                     <img src="https://placehold.co/30x30/ffc107/fff?text=⚙️" alt="Gear icon">
                 </div>
-                <h3 class="feature-title-item">Bulk Molasses Tanker Transport</h3>
+                <h3 class="feature-title-item"> 1. Bulk Molasses Transport </h3>
                 <p class="feature-description-item">
-                    We use dedicated stainless steel and food-grade tankers equipped to handle molasses in bulk. Each
-                    vehicle is maintained for hygienic, leak-proof operation.
+                    Food-grade tankers for timely, hygienic molasses delivery across states and regions.
+
                 </p>
             </div>
 
@@ -216,10 +207,9 @@
                 <div class="feature-icon-wrapper">
                     <img src="https://placehold.co/30x30/ffc107/fff?text=📈" alt="Chart icon">
                 </div>
-                <h3 class="feature-title-item"> PAN-India Delivery Network</h3>
+                <h3 class="feature-title-item"> 2. Contract Logistics</h3>
                 <p class="feature-description-item">
-                    Whether your plant is in Uttar Pradesh, Maharashtra, Karnataka, or Bihar – our nationwide fleet
-                    ensures on-time delivery across all major industrial regions.
+                    We offer long-term partnerships for manufacturers needing scheduled interstate shipments.
                 </p>
             </div>
 
@@ -228,10 +218,9 @@
                 <div class="feature-icon-wrapper">
                     <img src="https://placehold.co/30x30/ffc107/fff?text=💳" alt="Card icon">
                 </div>
-                <h3 class="feature-title-item">Customized Solutions</h3>
+                <h3 class="feature-title-item">3. Depot-to-Depot Delivery</h3>
                 <p class="feature-description-item">
-                    Need scheduled supply chain support for your manufacturing unit? We offer tailored transport
-                    contracts to suit your business needs.
+                    Efficient transfer from one production or storage facility to another — anywhere in India.
                 </p>
             </div>
 
@@ -240,25 +229,21 @@
                 <div class="feature-icon-wrapper">
                     <img src="https://placehold.co/30x30/ffc107/fff?text=✅" alt="Checkmark icon">
                 </div>
-                <h3 class="feature-title-item">End-to-End Logistics Coordination</h3>
+                <h3 class="feature-title-item">4. Fleet Management</h3>
                 <p class="feature-description-item">
-                    From sourcing to final delivery, our logistics experts manage every step, including:
+                    We offer fleet deployment for high-volume clients, ensuring flexibility and scalability.
                 </p>
-                <div class="feature-description-item-list" style="display: flex; flex-wrap: wrap; gap: 1px 10px; margin-top: 0;">
-                    <li >Route planning</li>
-                    <li>Vehicle tracking</li>
-                    <li>Compliance documentation</li>
-                    <li>Timely updates to clients</li>
-                </div>
             </div>
         </div>
     </div>
 
 
 
-        <section class="safety-charter-section">
+    <section class="safety-charter-section">
         <div class="safety-container">
-            <h2 class="safety-section-title">Safety, Compliance & Quality First</h2>
+            <h2 class="safety-section-title">Infrastructure Built for India’s Roads</h2>
+            <p style="font-size: 1.2rem;">We understand India’s diverse terrain, traffic conditions, and climate
+                challenges. That’s why we’ve built a fleet and operations model that is:</p>
 
             <div class="safety-features-grid">
                 <!-- Card 1 -->
@@ -266,10 +251,10 @@
                     <div class="safety-feature-icon">
                         <img src="https://placehold.co/35x35/ffffff/000?text=🚌" alt="Bus icon" />
                     </div>
-                    <h3 class="safety-feature-title-card">Fully Licensed & Regulated Transport</h3>
-                    <p class="safety-feature-description-card">
+                    <h3 class="safety-feature-title-card">Adaptable to long-distance hauling</h3>
+                    <!-- <p class="safety-feature-description-card">
                         Compliant with Excise, Pollution, and Food Safety norms
-                    </p>
+                    </p> -->
                 </div>
 
                 <!-- Card 2 -->
@@ -277,10 +262,10 @@
                     <div class="safety-feature-icon">
                         <img src="https://placehold.co/35x35/ffffff/000?text=🛄" alt="Luggage icon" />
                     </div>
-                    <h3 class="safety-feature-title-card">Driver Training & Safety Protocols</h3>
-                    <p class="safety-feature-description-card">
+                    <h3 class="safety-feature-title-card">Optimized for regional and rural deliveries</h3>
+                    <!-- <p class="safety-feature-description-card">
                         All operators are trained in handling liquid and hazardous cargo
-                    </p>
+                    </p> -->
                 </div>
 
                 <!-- Card 3 -->
@@ -288,10 +273,10 @@
                     <div class="safety-feature-icon">
                         <img src="https://placehold.co/35x35/ffffff/000?text=💒" alt="Church icon" />
                     </div>
-                    <h3 class="safety-feature-title-card">Tanker Hygiene</h3>
-                    <p class="safety-feature-description-card">
+                    <h3 class="safety-feature-title-card">Compliant with interstate regulatory frameworks</h3>
+                    <!-- <p class="safety-feature-description-card">
                         Regular cleaning and quality checks before each shipment
-                    </p>
+                    </p> -->
                 </div>
 
                 <!-- Card 4 -->
@@ -299,10 +284,10 @@
                     <div class="safety-feature-icon">
                         <img src="https://placehold.co/35x35/ffffff/000?text=🎒" alt="Backpack icon" />
                     </div>
-                    <h3 class="safety-feature-title-card">Temperature Control</h3>
-                    <p class="safety-feature-description-card">
+                    <h3 class="safety-feature-title-card">Ready for round-the-clock transport</h3>
+                    <!-- <p class="safety-feature-description-card">
                         We ensure molasses is transported under optimum conditions to avoid fermentation or spoilage
-                    </p>
+                    </p> -->
                 </div>
             </div>
         </div>
@@ -316,47 +301,54 @@
         <div class="why-choose-container">
             <!-- Left Image -->
             <div class="why-choose-image">
-                <img src="https://cdn.pixabay.com/photo/2023/03/15/03/46/jeep-7853620_1280.jpg" alt="Smiling Passenger" />
+                <img style="height: 450px;" src="https://cdn.pixabay.com/photo/2023/03/15/03/46/jeep-7853620_1280.jpg"
+                    alt="Smiling Passenger" />
             </div>
 
             <!-- Right Content -->
             <div class="why-choose-content">
-                <!-- <span class="why-choose-subtitle">WHY CHOOSE US</span> -->
-                <h2 class="why-choose-title">Why Choose Alaknanda Transport?
+                <span class="why-choose-subtitle">Technology-Driven Delivery</span>
+                <h2 class="why-choose-title" style="font-size: 2rem;">Our GPS-enabled tracking, central dispatch
+                    control, and real-time reporting allow our clients to stay updated at every milestone.
                 </h2>
 
                 <!-- Feature Box -->
                 <div class="why-choose-box">
                     <div class="why-choose-feature3">
                         <div class="why-choose-icon"><i class="fa-solid fa-globe"></i></div>
-                        <h4 style="color: #fff; font-size: 1.1rem; font-weight: 700;"> Serving All India</h4>
-
-                    </div>
-                    <div class="why-choose-feature3" >
-                        <div class="why-choose-icon"><i class="fa-solid fa-globe"></i></div>
-                        <h4 style="color: #fff; font-size: 1.1rem; font-weight: 700;">On-Time, Every Time</h4>
+                        <h4 style="color: #fff; font-size: 1.1rem; font-weight: 700;"> Live vehicle tracking</h4>
 
                     </div>
                     <div class="why-choose-feature3">
                         <div class="why-choose-icon"><i class="fa-solid fa-globe"></i></div>
-                        <h4 style="color: #fff; font-size: 1.1rem; font-weight: 700;">Specialized in Liquid Cargo</h4>
-
-                    </div>
-                </div>
-                <div class="why-choose-box" style="margin-top: 20px;">
-                     <div class="why-choose-feature3">
-                        <div class="why-choose-icon"><i class="fa-solid fa-globe"></i></div>
-                        <h4 style="color: #fff; font-size: 1.1rem; font-weight: 700;">Real-Time Tracking & Support</h4>
+                        <h4 style="color: #fff; font-size: 1.1rem; font-weight: 700;"> Delivery analytics and reporting
+                        </h4>
 
                     </div>
                     <div class="why-choose-feature3">
                         <div class="why-choose-icon"><i class="fa-solid fa-globe"></i></div>
-                        <h4 style="color: #fff; font-size: 1.1rem; font-weight: 700;">Trusted by Leading Sugar Mills & Distilleries</h4>
+                        <h4 style="color: #fff; font-size: 1.1rem; font-weight: 700;">24/7 customer service and dispatch
+                            coordination</h4>
+
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
+
+    <section class="client-trust-section">
+        <img src="https://cdn.pixabay.com/photo/2016/11/21/16/37/loader-1846346_1280.jpg" alt="Ships in port at night"
+            class="client-trust-background-image">
+        <div class="client-trust-image-overlay">
+            <p class="client-trust-subtitle">Our Clients Trust Us Because We Deliver</p>
+            <p class="client-trust-text">
+                We work with top distilleries, sugar mills, and agro-processing companies who trust Alaknanda Transport
+                for their critical nationwide supply chains.
+            </p>
+        </div>
+    </section>
+
 
 
 
