--- a/safe&secure.html
+++ b/safe&secure.html
@@ -128,7 +128,7 @@
 
     <!-- Hero Section -->
     <div class="about-section">
-        <h1 style="color: #fff;">Pan-India Operations</h1>
+        <h1 style="color: #fff;">Safe and Secure</h1>
     </div>
 
     <!-- Slant Shape -->
@@ -137,7 +137,7 @@
         <span>&raquo;</span>
         <span>Services</span>
         <span>&raquo;</span>
-        <span>Pan-India Operations</span>
+        <span>Safe and Secure</span>
 
     </div>
 
@@ -160,33 +160,33 @@
 
             <!-- Right Side: Content -->
             <div class="about-logistics-right">
-                <span class="about-logistics-subtitle">Alaknanda Transport – Pan India Operations You Can Rely On</span>
-                <h2 class="about-logistics-title">Nationwide Logistics for Bulk Molasses Transport & More</h2>
+                <span class="about-logistics-subtitle">Safe & Secure Transport – The Alaknanda Standard</span>
+                <h2 class="about-logistics-title">Your Cargo is Valuable. We Treat it That Way.</h2>
                 <p class="about-logistics-description">
-                    At Alaknanda Transport, we proudly offer Pan India logistics and transportation solutions, ensuring
-                    seamless delivery of bulk molasses and other liquid cargo across every corner of India. Our
-                    extensive fleet, experienced workforce, and deep understanding of regional compliance requirements
-                    make us the preferred transport partner for industries that demand speed, safety, and consistency.
+                    At Alaknanda Transport, safety is not an option — it’s our core commitment. Whether we're
+                    transporting molasses, ethanol, or any other liquid cargo, we follow strict safety protocols,
+                    industry best practices, and legal compliance at every stage of our logistics process. We understand
+                    that our clients depend on us not just to deliver, but to deliver safely, securely, and on time.
                 </p>
             </div>
         </div>
     </section>
 
 
-    <div class="container">
+    <div class="container" style="margin-top: 20px;">
         <!-- Section Header -->
-        <div class="section-header">
+        <div class="section-header" style="margin: 10px;">
             <div class="header-left">
-                <h2 class="main-title"> Services Enabled Through Our Pan India Operations:</h2>
+                <h2 class="main-title"> End-to-End Safety <br> Protocols</h2>
             </div>
-            <!-- <div class="header-right">
-                <p class="header-description">
-                    A non pretium litora adipiscing velit. Felis amet per eros platea ullamcorper
-                    a. Torquent sollicitudin pretium inceptos sed gravida tortor ridiculus
-                    interdum cubilia ornare.
+            <div class="header-right">
+                <p class="header-description" style="margin-top: 20px;">
+                    From loading at source to final delivery, we implement a multi-level safety framework that minimizes
+                    risk and ensures complete cargo integrity.
                 </p>
-            </div> -->
+            </div>
         </div>
+        <p style="font-size: 1rem; margin-left: 10px;"> Our Safety Measures Include:</p>
 
         <!-- Features Grid -->
         <div class="features-grid">
@@ -195,10 +195,9 @@
                 <div class="feature-icon-wrapper">
                     <img src="https://placehold.co/30x30/ffc107/fff?text=⚙️" alt="Gear icon">
                 </div>
-                <h3 class="feature-title-item"> 1. Bulk Molasses Transport </h3>
+                <h3 class="feature-title-item"> Hygienic, Sealed Tankers: </h3>
                 <p class="feature-description-item">
-                    Food-grade tankers for timely, hygienic molasses delivery across states and regions.
-
+                    All tankers are cleaned and sealed to prevent contamination or spillage.
                 </p>
             </div>
 
@@ -207,9 +206,9 @@
                 <div class="feature-icon-wrapper">
                     <img src="https://placehold.co/30x30/ffc107/fff?text=📈" alt="Chart icon">
                 </div>
-                <h3 class="feature-title-item"> 2. Contract Logistics</h3>
+                <h3 class="feature-title-item"> GPS Monitoring:</h3>
                 <p class="feature-description-item">
-                    We offer long-term partnerships for manufacturers needing scheduled interstate shipments.
+                    Real-time vehicle tracking with live status updates.
                 </p>
             </div>
 
@@ -218,9 +217,10 @@
                 <div class="feature-icon-wrapper">
                     <img src="https://placehold.co/30x30/ffc107/fff?text=💳" alt="Card icon">
                 </div>
-                <h3 class="feature-title-item">3. Depot-to-Depot Delivery</h3>
+                <h3 class="feature-title-item">Temperature Stability:</h3>
                 <p class="feature-description-item">
-                    Efficient transfer from one production or storage facility to another — anywhere in India.
+                    We ensure conditions are controlled to prevent fermentation or spoilage of molasses.
+
                 </p>
             </div>
 
@@ -229,9 +229,19 @@
                 <div class="feature-icon-wrapper">
                     <img src="https://placehold.co/30x30/ffc107/fff?text=✅" alt="Checkmark icon">
                 </div>
-                <h3 class="feature-title-item">4. Fleet Management</h3>
+                <h3 class="feature-title-item">Driver Safety Training:</h3>
                 <p class="feature-description-item">
-                    We offer fleet deployment for high-volume clients, ensuring flexibility and scalability.
+                    All drivers are trained in liquid cargo handling, emergency procedures, and safe driving techniques.
+                </p>
+            </div>
+            <!-- Feature Item 5: Compliance Solutions -->
+            <div class="feature-item">
+                <div class="feature-icon-wrapper">
+                    <img src="https://placehold.co/30x30/ffc107/fff?text=✅" alt="Checkmark icon">
+                </div>
+                <h3 class="feature-title-item">Speed & Route Monitoring:</h3>
+                <p class="feature-description-item">
+                    AI-assisted tracking tools alert us to deviations or delays instantly.
                 </p>
             </div>
         </div>
@@ -241,9 +251,10 @@
 
     <section class="safety-charter-section">
         <div class="safety-container">
-            <h2 class="safety-section-title">Infrastructure Built for India’s Roads</h2>
-            <p style="font-size: 1.2rem;">We understand India’s diverse terrain, traffic conditions, and climate
-                challenges. That’s why we’ve built a fleet and operations model that is:</p>
+            <h2 class="safety-section-title">Regulatory Compliance & Documentation</h2>
+            <p style="font-size: 1.2rem;">Alaknanda Transport follows all state and central government regulations for
+                transporting molasses and other sensitive goods. We ensure your shipment meets every compliance
+                requirement.</p>
 
             <div class="safety-features-grid">
                 <!-- Card 1 -->
@@ -251,7 +262,7 @@
                     <div class="safety-feature-icon">
                         <img src="https://placehold.co/35x35/ffffff/000?text=🚌" alt="Bus icon" />
                     </div>
-                    <h3 class="safety-feature-title-card">Adaptable to long-distance hauling</h3>
+                    <h3 class="safety-feature-title-card">Excise and Taxation Documentation</h3>
                     <!-- <p class="safety-feature-description-card">
                         Compliant with Excise, Pollution, and Food Safety norms
                     </p> -->
@@ -262,7 +273,7 @@
                     <div class="safety-feature-icon">
                         <img src="https://placehold.co/35x35/ffffff/000?text=🛄" alt="Luggage icon" />
                     </div>
-                    <h3 class="safety-feature-title-card">Optimized for regional and rural deliveries</h3>
+                    <h3 class="safety-feature-title-card">Pollution Control Certificates</h3>
                     <!-- <p class="safety-feature-description-card">
                         All operators are trained in handling liquid and hazardous cargo
                     </p> -->
@@ -273,7 +284,7 @@
                     <div class="safety-feature-icon">
                         <img src="https://placehold.co/35x35/ffffff/000?text=💒" alt="Church icon" />
                     </div>
-                    <h3 class="safety-feature-title-card">Compliant with interstate regulatory frameworks</h3>
+                    <h3 class="safety-feature-title-card">Food Grade Transport Certification (when applicable)</h3>
                     <!-- <p class="safety-feature-description-card">
                         Regular cleaning and quality checks before each shipment
                     </p> -->
@@ -284,52 +295,112 @@
                     <div class="safety-feature-icon">
                         <img src="https://placehold.co/35x35/ffffff/000?text=🎒" alt="Backpack icon" />
                     </div>
-                    <h3 class="safety-feature-title-card">Ready for round-the-clock transport</h3>
+                    <h3 class="safety-feature-title-card">Vehicle Permits and Driver Verifications</h3>
                     <!-- <p class="safety-feature-description-card">
                         We ensure molasses is transported under optimum conditions to avoid fermentation or spoilage
                     </p> -->
                 </div>
+
             </div>
+            <p style="font-size: 1.1rem; margin-top: 30px;">We stay ahead of the curve, so you don't have to worry about
+                legalities or disruptions.</p>
         </div>
+
+        <hr style="margin: 40px 0;">
+
+
+        <div class="safety-container">
+            <h2 class="safety-section-title">Driver Safety & Training Program</h2>
+            <p style="font-size: 1.2rem;">Our drivers are the backbone of our operations — and we ensure they’re
+                well-prepared:</p>
+
+            <div class="safety-features-grid">
+                <!-- Card 1 -->
+                <div class="safety-feature-card">
+                    <div class="safety-feature-icon">
+                        <img src="https://placehold.co/35x35/ffffff/000?text=🚌" alt="Bus icon" />
+                    </div>
+                    <h3 class="safety-feature-title-card"> Trained in chemical transport safety and liquid handling</h3>
+                    <!-- <p class="safety-feature-description-card">
+                        Compliant with Excise, Pollution, and Food Safety norms
+                    </p> -->
+                </div>
+
+                <!-- Card 2 -->
+                <div class="safety-feature-card">
+                    <div class="safety-feature-icon">
+                        <img src="https://placehold.co/35x35/ffffff/000?text=🛄" alt="Luggage icon" />
+                    </div>
+                    <h3 class="safety-feature-title-card">Certified in fire safety and emergency control</h3>
+                    <!-- <p class="safety-feature-description-card">
+                        All operators are trained in handling liquid and hazardous cargo
+                    </p> -->
+                </div>
+
+                <!-- Card 3 -->
+                <div class="safety-feature-card">
+                    <div class="safety-feature-icon">
+                        <img src="https://placehold.co/35x35/ffffff/000?text=💒" alt="Church icon" />
+                    </div>
+                    <h3 class="safety-feature-title-card"> Regular health and sobriety checks</h3>
+                    <!-- <p class="safety-feature-description-card">
+                        Regular cleaning and quality checks before each shipment
+                    </p> -->
+                </div>
+
+                <!-- Card 4 -->
+                <div class="safety-feature-card">
+                    <div class="safety-feature-icon">
+                        <img src="https://placehold.co/35x35/ffffff/000?text=🎒" alt="Backpack icon" />
+                    </div>
+                    <h3 class="safety-feature-title-card"> Equipped with PPE and emergency toolkits</h3>
+                    <!-- <p class="safety-feature-description-card">
+                        We ensure molasses is transported under optimum conditions to avoid fermentation or spoilage
+                    </p> -->
+                </div>
+
+            </div>
+            <p style="font-size: 1.1rem; margin-top: 30px;">We believe safe transport begins with safe people.</p>
+        </div>
+        <hr style="margin-top: 40px;">
     </section>
 
+    <section class="quality-works-section">
+        <div class="quality-container">
+            <h2 class="quality-section-title">Quality Audits & Maintenance</h2>
+            <p class="quality-section-description">
+                Our safety doesn’t stop at the road — we maintain quality at the depot too:
+            </p>
 
+            <div class="quality-image-cards-container">
+                <!-- Background Image Strip -->
+                <img src="https://cdn.pixabay.com/photo/2018/03/21/23/17/vehicle-3248723_1280.jpg"
+                    class="quality-background-image-strip">
 
-
-
-    <section class="why-choose-section">
-        <div class="why-choose-container">
-            <!-- Left Image -->
-            <div class="why-choose-image">
-                <img style="height: 450px;" src="https://cdn.pixabay.com/photo/2023/03/15/03/46/jeep-7853620_1280.jpg"
-                    alt="Smiling Passenger" />
-            </div>
-
-            <!-- Right Content -->
-            <div class="why-choose-content">
-                <span class="why-choose-subtitle">Technology-Driven Delivery</span>
-                <h2 class="why-choose-title" style="font-size: 2rem;">Our GPS-enabled tracking, central dispatch
-                    control, and real-time reporting allow our clients to stay updated at every milestone.
-                </h2>
-
-                <!-- Feature Box -->
-                <div class="why-choose-box">
-                    <div class="why-choose-feature3">
-                        <div class="why-choose-icon"><i class="fa-solid fa-globe"></i></div>
-                        <h4 style="color: #fff; font-size: 1.1rem; font-weight: 700;"> Live vehicle tracking</h4>
-
+                <!-- Feature Cards Row -->
+                <div class="quality-feature-cards-row">
+                    <!-- Card 1 -->
+                    <div class="quality-feature-card">
+                        <div class="quality-card-number-icon">1</div>
+                        <h3 class="quality-card-title">Routine inspection of tankers</h3>
                     </div>
-                    <div class="why-choose-feature3">
-                        <div class="why-choose-icon"><i class="fa-solid fa-globe"></i></div>
-                        <h4 style="color: #fff; font-size: 1.1rem; font-weight: 700;"> Delivery analytics and reporting
-                        </h4>
 
+                    <!-- Card 2 -->
+                    <div class="quality-feature-card">
+                        <div class="quality-card-number-icon">2</div>
+                        <h3 class="quality-card-title">Regular maintenance and cleaning schedules</h3>
                     </div>
-                    <div class="why-choose-feature3">
-                        <div class="why-choose-icon"><i class="fa-solid fa-globe"></i></div>
-                        <h4 style="color: #fff; font-size: 1.1rem; font-weight: 700;">24/7 customer service and dispatch
-                            coordination</h4>
 
+                    <!-- Card 3 -->
+                    <div class="quality-feature-card">
+                        <div class="quality-card-number-icon">3</div>
+                        <h3 class="quality-card-title">Documentation audits and compliance checks</h3>
+                    </div>
+
+                    <!-- Card 4 -->
+                    <div class="quality-feature-card">
+                        <div class="quality-card-number-icon">4</div>
+                        <h3 class="quality-card-title">Random field inspections and third-party verifications</h3>
                     </div>
                 </div>
             </div>
@@ -337,26 +408,18 @@
     </section>
 
 
-    <section class="client-trust-section">
-        <img src="https://cdn.pixabay.com/photo/2016/11/21/16/37/loader-1846346_1280.jpg" alt="Ships in port at night"
-            class="client-trust-background-image">
+    <section class="client-trust-section" style="height: 350px; margin-top: 30px;">
+        <img style="height: 100%;" src="https://cdn.pixabay.com/photo/2016/11/21/16/37/loader-1846346_1280.jpg"
+            alt="Ships in port at night" class="client-trust-background-image">
         <div class="client-trust-image-overlay">
-            <p class="client-trust-subtitle">Our Clients Trust Us Because We Deliver</p>
+            <p class="client-trust-subtitle"> Secure Delivery, Every Time</p>
             <p class="client-trust-text">
-                We work with top distilleries, sugar mills, and agro-processing companies who trust Alaknanda Transport
-                for their critical nationwide supply chains.
+                Whether your destination is a city-based distillery or a remote sugar mill, we ensure complete
+                chain-of-custody control, right from loading to delivery. With smart route optimization, controlled
+                speed limits, and dispatch monitoring, your cargo is always under watch.
             </p>
         </div>
     </section>
-
-
-
-
-
-
-
-
-
 
 
     <!----------- Start Footer Sections ---------------->
